--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,8 +3,8 @@ width: 80%;
 height: 50px;
 display: flex;
 color: grey;
-padding: 0 20px
-font-size: 16px
+padding: 0 20px;
+font-size: 16px;
 cursor: pointer
 }
 
