add chart to profile page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,3 +15,8 @@ cursor: pointer
 .login-google-btn svg {
     margin-left: 40px;
 }
+
+#ProgressChart {
+    /* width: 60% !important; */
+    /* height: 50% !important; */
+}
