--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,3 +20,74 @@ cursor: pointer
     /* width: 60% !important; */
     /* height: 50% !important; */
 }
+
+
+/* CSS animation */
+
+/* pastel colours  #CCFF99, #FF9999, #CC99FF, #66FFFF */
+/* complimentary colours #08b500, #ad00b5, #b50008, #08b500 */
+body {
+  width: 100wh;
+  height: 90vh;
+  color: #fff;
+  background: linear-gradient(45deg, #8d8825, #cb343c, #89258e, #c334cb, #8d252b, #c9c236 );
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 155s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 0%
+  }
+  14% {
+    background-position: 0% 100%
+  }
+  28% {
+    background-position: 100% 0%
+  }
+  33% {
+    background-position: 100% 100%
+  }
+  42% {
+    background-position: 0% 0%
+  }
+  59% {
+    background-position: 100% 0%
+  }
+  71% {
+    background-position: 0% 100%
+  }
+  86% {
+    background-position: 100% 100%
+  }
+  100% {
+    background-position: 0% 0%
+  }
+
+}
