--- a/chrome_extension/cssmods/comic-sans.css
+++ b/chrome_extension/cssmods/comic-sans.css
@@ -1,3 +1,4 @@
 * {
-  font-family: 'Comic Sans MS', cursive, sans-serif !important;
+  font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', 'Marker Felt', 'Purisa', 'URW Chancery L', cursive,
+    sans-serif !important;
 }
