--- a/chrome_extension/popup/popup.css
+++ b/chrome_extension/popup/popup.css
@@ -1,4 +1,36 @@
 body {
   width: 20rem;
-  height: 10rem;
+  height: 20rem;
+}
+
+#message {
+  text-align: center;
+  width: 100%;
+  height: 10%;
+}
+
+#status {
+  text-align: center;
+  text-transform: capitalize;
+  width: 100%;
+  height: 45%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#script {
+  text-transform: capitalize;
+  text-align: center;
+  height: 45%;
+  width: 100%;
+}
+
+.hell {
+}
+.awful {
+}
+.bad {
+}
+.good {
 }
