Add style to popup

--- a/chrome_extension/cssmods/hover-disappear.css
+++ b/chrome_extension/cssmods/hover-disappear.css
@@ -1,10 +1,10 @@
-p, h1, h2, h3, h4, h5, h6, li, a, img, video, button{
+p, h1, h2, h3, h4, h5, h6, li, a, img, video, button, span{
   opacity: 1;
   animation: reappear 13s;
   -webkit-animation: reappear 13s;
 }
 
-p:hover, h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, h6:hover, li:hover, a:hover, img:hover, video:hover, button:hover{
+p:hover, h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, h6:hover, li:hover, a:hover, img:hover, video:hover, button:hover, span:hover{
   opacity: 0;
   animation: disappear 0.25s;
   -webkit-animation: disappear 0.25;
