--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -276,17 +276,14 @@ input[type='number']::-webkit-outer-spin-button {
   transition-duration: 150ms;
   transition-timing-function: ease-in-out;
   padding: 0;
-
-  &:focus,
-  &:hover {
-    box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
-  }
-
-  &:active {
-    background-color: #e5e5e5;
-    box-shadow: none;
-    transition-duration: 10ms;
-  }
+}
+.google-button:focus, .google-button:hover {
+  box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+}
+.google-button:active {
+  background-color: #e5e5e5;
+  box-shadow: none;
+  transition-duration: 10ms;
 }
 
 .google-button__icon {
