profile page changes

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -264,6 +264,20 @@ input[type='number']::-webkit-outer-spin-button {
   color: white;
 }
 
+.welcome {
+  color: rgb(44, 42, 42);
+  text-align: center;
+}
+
+.progress {
+  color: rgb(44, 42, 42);
+  text-align: center;
+}
+
+.connect {
+  text-align: center;
+}
+
 .google-button {
   height: 40px;
   border-width: 0;
@@ -277,7 +291,8 @@ input[type='number']::-webkit-outer-spin-button {
   transition-timing-function: ease-in-out;
   padding: 0;
 }
-.google-button:focus, .google-button:hover {
+.google-button:focus,
+.google-button:hover {
   box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
 }
 .google-button:active {
