--- a/chrome_extension/popup/popup.css
+++ b/chrome_extension/popup/popup.css
@@ -12,7 +12,7 @@ body {
 }
 
 #message {
-  letter-spacing: 0.25rem;
+  letter-spacing: 0.1rem;
   text-align: center;
 }
 
@@ -24,36 +24,47 @@ body {
 }
 
 #status-message {
+  text-align: center;
   font-family: big-bear, sans-serif;
+  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
   margin: 0;
+  border-radius: 5px;
 }
 
 #script {
   text-transform: capitalize;
   text-align: center;
   height: 30%;
-  width: 100%;
-  padding: 2rem 0 0 0;
+  width: fit-content;
+  padding: 1rem 2rem;
 }
 
 #script-messge {
   font-family: big-bear, sans-serif;
-  margin: 0 1rem;
+  margin: 0 2rem;
+}
+
+.loading {
+  background-image: url('../vendor/img/loading.gif');
+  background-size: 100% 100%;
 }
 
 .hell {
   background-image: url('../vendor/img/hell.gif');
   background-size: 100% 100%;
 }
+
 .awful {
-  color: white;
   background-image: url('../vendor/img/awful.gif');
   background-size: 100% 100%;
 }
+
 .bad {
   background-image: url('../vendor/img/bad.gif');
   background-size: 100% 100%;
 }
+
 .good {
+  background-image: url('../vendor/img/good.gif');
   background-size: 100% 100%;
 }
