--- a/chrome_extension/cssmods/zoom-bad.css
+++ b/chrome_extension/cssmods/zoom-bad.css
@@ -21,3 +21,8 @@ body {
     0% {-webkit-transform: scale(1);}
     0% {transform: scale(1);}
 }
+
+* {
+    font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', 'Marker Felt', 'Purisa', 'URW Chancery L', cursive,
+      sans-serif !important;
+  }
