--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -178,7 +178,7 @@ body {
     grid-row: 2;
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(6, auto);
     overflow: scroll;
     .profile-card {
       grid-column: 2 / span 1;
@@ -186,7 +186,7 @@ body {
       padding: 20px;
       justify-self: center;
       align-self: center;
-      max-width: 250px;
+      max-width: 300px;
       p {
         margin: 0;
       }
@@ -206,7 +206,8 @@ body {
     .week-steps {
       grid-column: 4 / span 1;
       grid-row: 1 / span 2;
-      justify-content: center;
+      justify-self: center;
+      align-self: center;
       margin: 0;
       .value {
         font-family: big-bear !important;
@@ -243,14 +244,14 @@ body {
     }
     .canvas {
       grid-column: 2 / span 3;
-      grid-row: 4 / span 1;
+      grid-row-start: 4;
       justify-self: center;
       align-self: center;
-      width: 75%;
+      width: 80%;
     }
     .connect {
-      grid-column: 3 / span 2;
-      grid-row: 1 / span 2;
+      grid-column: 2 / span 3;
+      grid-row: 3 / span 2;
       justify-self: center;
       align-self: center;
       text-align: center;
@@ -384,7 +385,7 @@ body {
       }
       .connect {
         grid-column: 1;
-        display: none;
+        grid-row: 6;
       }
     }
     .content-account {
