--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -406,6 +406,53 @@ body {
     }
   }
 
+  .user-profile {
+    padding-top: 25px;
+    grid-column: 1 / span 3;
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 1fr 3fr 3fr 1fr;
+    grid-template-rows: repeat(6, auto);
+    overflow: scroll;
+    .profile-card {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 2;
+      padding: 20px;
+      justify-self: center;
+      align-self: center;
+      max-width: 300px;
+      p {
+        margin: 0;
+      }
+      h1 {
+        margin: 0;
+        color: black;
+      }
+    }
+    .week-steps {
+      grid-column: 3 / span 1;
+      grid-row: 1 / span 2;
+      justify-self: center;
+      align-self: center;
+      margin: 0;
+      .value {
+        font-family: big-bear !important;
+        color: white !important;
+        letter-spacing: 4px;
+      }
+      .slabel {
+        color: white !important;
+      }
+    }
+    .canvas {
+      grid-column: 2 / span 2;
+      grid-row-start: 3;
+      justify-self: center;
+      align-self: center;
+      width: 80%;
+    }
+  }
+
   @media screen and (max-width: 768px) {
     .content-profile {
       padding-top: 25px;
