--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -411,7 +411,7 @@ body {
     grid-column: 1 / span 3;
     grid-row: 2;
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr 1fr;
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
     grid-template-rows: repeat(6, auto);
     overflow: scroll;
     .profile-card {
@@ -429,9 +429,15 @@ body {
         color: black;
       }
     }
-    .week-steps {
+    .add-friend {
       grid-column: 3 / span 1;
       grid-row: 1 / span 2;
+      justify-self: center;
+      align-self: center;
+    }
+    .week-steps {
+      grid-column: 4 / span 1;
+      grid-row: 1 / span 1;
       justify-self: center;
       align-self: center;
       margin: 0;
@@ -444,8 +450,20 @@ body {
         color: white !important;
       }
     }
+    .friends {
+      grid-column: 4 / span 1;
+      grid-row: 2 / span 1;
+      justify-self: center;
+      align-self: center;
+      ul {
+        grid-column: 1 / span 3;
+        grid-row: 1 / span 4;
+        list-style: none;
+        padding: 0;
+      }
+    }
     .canvas {
-      grid-column: 2 / span 2;
+      grid-column: 2 / span 3;
       grid-row-start: 3;
       justify-self: center;
       align-self: center;
